# graphics-engine

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  draw-lines  ge
includes/: camera.h  constants.h  framebuffer.h  geometry.h  math.h  object.h  transform.h
src/: camera.cpp  framebuffer.cpp  geometry.cpp  main.cpp  math.cpp  transform.cpp
